--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,13 +7,22 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=testdata
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
   web:
-    image: grocerypsql:v1
+    image: test:v1
     ports:
       - "5000:5000"
     environment:
-      - url=postgresdb
+      - url=db
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+        restart: true
+    
