--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       start_period: 30s
       timeout: 10s
   web:
-    image: test:v1
+    image: grocerypsql:v1
     ports:
       - "5000:5000"
     environment:
