jekins file updated

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,11 +10,11 @@ services:
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
-      retries: 5
+      retries: 10
       start_period: 30s
       timeout: 10s
   web:
-    image: kavirajkv/grocerypsql:v1
+    image: grocerypsql:v1
     ports:
       - "5000:5000"
     environment:
@@ -25,4 +25,6 @@ services:
       db:
         condition: service_healthy
         restart: true
+    links:
+      - db
     
